feat: add lru cache database

--- a/mysql.env
+++ b/mysql.env
@@ -1,6 +1,7 @@
 MYSQL_ROOT_PASSWORD=1234
 MYSQL_DATABASE=libraryService
 MYSQL_USER=alexandr
-MYSQL_PASSWORD=1234
+MYSQL_PASSWORD=4321
 MYSQL_NETWORK=tcp(db:3306)
-MYSQL_
+MYSQL_CONN_MAX_LIFETIME=100
+MYSQL_MAX_IDLE_CONNS=10
