--- a/mysql.env
+++ b/mysql.env
@@ -1,7 +1,7 @@
-MYSQL_ROOT_PASSWORD=1234
+MYSQL_ROOT_PASSWORD={root passwd}
 MYSQL_DATABASE=libraryService
-MYSQL_USER=alexandr
-MYSQL_PASSWORD=4321
-MYSQL_NETWORK=tcp(db:3306)
-MYSQL_CONN_MAX_LIFETIME=100
-MYSQL_MAX_IDLE_CONNS=10
+MYSQL_USER={your username}
+MYSQL_PASSWORD={user passwd}
+DB_NETWORK=tcp(db:3306)
+DB_CONN_MAX_LIFETIME=100
+DB_MAX_IDLE_CONNS=10
